funny result need to implement double point checking for bullet collision